--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Restaurante Taste</title>
     <!-- Box Icons -->
+    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
@@ -45,6 +46,45 @@
             <h2>Dedicação há mais <br> de 20 anos</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima ut, obcaecati explicabo nisi voluptatem cupiditate ex voluptas quisquam deserunt. Nemo rerum quia atque corporis sit, quidem optio ipsam natus numquam.</p>
             <a href="#" class="btn">Saiba Mais</a>
+        </div>
+    </section>
+
+    <!-- Menu -->
+    <section class="menu" id="menu">
+        <div class="heading">
+            <span>Menu</span>
+            <h2>Menu da semana</h2>
+        </div>
+        <div class="menu-container">
+            <div class="box">
+                <div class="box-img">
+                    <img src="imagens/pizzadacasa.jpg" alt="">
+                </div>
+                <h2>Pizza da Casa</h2>
+                <h3>Experimente por</h3>
+                <span>R$32.90</span>
+                <i class='bx bx-cart-alt'></i>
+            </div>
+            <!-- Caixa do item 2 -->
+            <div class="box">
+                <div class="box-img">
+                    <img src="imagens/pizzadacasa.jpg" alt="">
+                </div>
+                <h2>Pizza da Casa</h2>
+                <h3>Experimente por</h3>
+                <span>R$32.90</span>
+                <i class='bx bx-cart-alt'></i>
+            </div>
+            <!-- Caixa do item 3 -->
+            <div class="box">
+                <div class="box-img">
+                    <img src="imagens/pizzadacasa.jpg" alt="">
+                </div>
+                <h2>Pizza da Casa</h2>
+                <h3>Experimente por</h3>
+                <span>R$32.90</span>
+                <i class='bx bx-cart-alt'></i>
+            </div>
         </div>
     </section>
 
