--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
             <li><a href="#menu">Menu</a></li>
             <li><a href="#services">Serviços</a></li>
             <li><a href="#contact">Contato</a></li>
+            <!-- Modo Dark -->
+            
         </ul>
     </header>
 
@@ -58,7 +60,7 @@
         <div class="menu-container">
             <div class="box">
                 <div class="box-img">
-                    <img src="imagens/pizzadacasa.jpg" alt="">
+                    <img src="imagens/item1.png" alt="">
                 </div>
                 <h2>Pizza da Casa</h2>
                 <h3>Experimente por</h3>
@@ -68,25 +70,105 @@
             <!-- Caixa do item 2 -->
             <div class="box">
                 <div class="box-img">
-                    <img src="imagens/pizzadacasa.jpg" alt="">
+                    <img src="imagens/item2.jpg" alt="">
                 </div>
-                <h2>Pizza da Casa</h2>
+                <h2>Le Sanduichê</h2>
                 <h3>Experimente por</h3>
-                <span>R$32.90</span>
+                <span>R$11.90</span>
                 <i class='bx bx-cart-alt'></i>
             </div>
             <!-- Caixa do item 3 -->
             <div class="box">
                 <div class="box-img">
-                    <img src="imagens/pizzadacasa.jpg" alt="">
+                    <img src="imagens/item3.png" alt="">
                 </div>
-                <h2>Pizza da Casa</h2>
+                <h2>Chili Fries</h2>
                 <h3>Experimente por</h3>
-                <span>R$32.90</span>
+                <span>R$8.90</span>
                 <i class='bx bx-cart-alt'></i>
             </div>
         </div>
     </section>
+
+    <!-- Serviços -->
+    <section class="services" id="services">
+        <div class="heading">
+            <span>Serviços</span>
+            <h2>Temos os melhores sabores do mercado</h2>
+        </div>
+
+        <div class="services-container">
+            <!-- Caixa 1 -->
+            <div class="s-box">
+                <img src="imagens/cart.png" alt="">
+                <h3>Seu Pedido</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam fugiat quas qui tempore provident repellendus repudiandae, laudantium, autem dicta molestiae unde sequi nihil, aspernatur laboriosam. Dolores fuga voluptate impedit minus.</p>
+            </div>
+            <!-- Caixa 2 -->
+            <div class="s-box">
+                <img src="imagens/truck.png" alt="">
+                <h3>Envio</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam fugiat quas qui tempore provident repellendus repudiandae, laudantium, autem dicta molestiae unde sequi nihil, aspernatur laboriosam. Dolores fuga volupts.</p>
+            </div>
+            <!-- Caixa 3 -->
+            <div class="s-box">
+                <img src="imagens/delivery.jpg" alt="">
+                <h3>Entrega Delivery</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam fugiat quas qui tempore provident repellendus repudiandae, laudantium, autem dicta molestiae unde sequi nihil, aspernatur laboriosam. Dolores fuga volupts.</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Contato prévia -->
+    <section class="connect">
+        <div class="connect-text">
+            <span>Dê-nos a sua opinião!</span>
+            <h2>Contato</h2>
+        </div>
+        <a href="#" class="btn">Contate-nos</a>
+    </section>
+
+    <!-- Rodapé -->
+    <!-- Contato -->
+    <section class="contact" id="contact">
+        <div class="contact-box">
+            <h3>Taste</h3>
+            <span>Se conecte com a gente!</span>
+            <div class="social">
+                <a href="#"><i class="bx bxl-facebook"></i></a>
+                <a href="#"><i class="bx bxl-twitter"></i></a>
+                <a href="#"><i class="bx bxl-instagram"></i></a>
+            </div>
+        </div>
+        <div class="contact-box">
+            <h3>Links do Menu</h3>
+            <li><a href="#home">Inicio</a></li>
+            <li><a href="#about">Sobre</a></li>
+            <li><a href="#menu">Menu</a></li>
+            <li><a href="#services">Serviços</a></li>
+            <li><a href="#contact">Contato</a></li>
+        </div>
+        <div class="contact-box">
+            <h3>Links Comerciais</h3>
+            <li><a href="#Contato">Contato</a></li>
+            <li><a href="#Política de Privacidade">Política de Privacidade</a></li>
+            <li><a href="#Disclaimer">Disclaimer</a></li>
+            <li><a href="#Termos de Privacidade">Termos de Privacidade</a></li>
+             
+        </div>
+        <div class="contact-box address">
+            <h3>Contato</h3>
+            <i class="bx bxs-map"><span>Rua Bell Aliance, 140, SCS</span></i>
+            <i class="bx bxs-phone"><span>(11) 99990-8765</span></i>
+            <i class="bx bxs-envelope"><span>Tastecommercial@gmail.com</span></i>
+
+        </div>
+    </section>
+
+    <!-- Copyright -->
+    <div class="copyright">
+        <p>&#169; Taste Todos os Direitos Reservados.</p>
+    </div>
 
     <!-- Referência JS -->
     <script src="principal.js"></script>
