--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <li><a href="#services">Serviços</a></li>
             <li><a href="#contact">Contato</a></li>
             <!-- Modo Dark -->
-            
+            <div class="bx bx-moon" id="darkmode"></div>
         </ul>
     </header>
 
@@ -169,6 +169,9 @@
     <div class="copyright">
         <p>&#169; Taste Todos os Direitos Reservados.</p>
     </div>
+
+    <!-- Scroll -->
+    <script src="https://unpkg.com/scrollreveal"></script>
 
     <!-- Referência JS -->
     <script src="principal.js"></script>
